fix: tests assert on source layout and text instead of behavior